--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -21,8 +21,8 @@ jobs:
       uses: docker/login-action@v3.1.0
       with:
         registry: ccr.ccs.tencentyun.com
-        username: ${{ secret.TENCENT_TCR_USERNAME }}
-        password: ${{ secret.TENCENT_TCR_PASSWORD }}
+        username: ${{ secrets.TENCENT_TCR_USERNAME }}
+        password: ${{ secrets.TENCENT_TCR_PASSWORD }}
         
         
     - name: Build and Push Docker image
