--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -16,13 +16,11 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4.1.2
 
-
     - name: Docker Login
       uses: docker/login-action@v3.1.0
       with:
-        registry: ccr.ccs.tencentyun.com
-        username: ${{ secrets.TENCENT_TCR_USERNAME }}
-        password: ${{ secrets.TENCENT_TCR_PASSWORD }}
+        username: fengwenhao
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
         
         
     - name: Build and Push Docker image
@@ -30,5 +28,21 @@ jobs:
       with:
         push: true
         tags: |
-          ccr.ccs.tencentyun.com/fengwenhao/boot-cicd-demo:${{ github.run_number }}
-          ccr.ccs.tencentyun.com/fengwenhao/boot-cicd-demo
+          fengwenhao/boot-cicd-demo:${{ github.run_number }}
+          fengwenhao/boot-cicd-demo
+
+    # - name: Docker Login
+    #   uses: docker/login-action@v3.1.0
+    #   with:
+    #     registry: ccr.ccs.tencentyun.com
+    #     username: ${{ secrets.TENCENT_TCR_USERNAME }}
+    #     password: ${{ secrets.TENCENT_TCR_PASSWORD }}
+        
+        
+    # - name: Build and Push Docker image
+    #   uses: docker/build-push-action@v5.3.0
+    #   with:
+    #     push: true
+    #     tags: |
+    #       ccr.ccs.tencentyun.com/fengwenhao/boot-cicd-demo:${{ github.run_number }}
+    #       ccr.ccs.tencentyun.com/fengwenhao/boot-cicd-demo
